; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_iommu.c_iotlb_lock_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_iommu.c_iotlb_lock_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iommu = type { i32 }
%struct.iotlb_lock = type { i32, i32 }

@MMU_LOCK_BASE_SHIFT = common dso_local global i32 0, align 4
@MMU_LOCK_VICT_SHIFT = common dso_local global i32 0, align 4
@MMU_LOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iommu*, %struct.iotlb_lock*)* @iotlb_lock_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iotlb_lock_set(%struct.iommu* %0, %struct.iotlb_lock* %1) #0 {
  %3 = alloca %struct.iommu*, align 8
  %4 = alloca %struct.iotlb_lock*, align 8
  %5 = alloca i32, align 4
  store %struct.iommu* %0, %struct.iommu** %3, align 8
  store %struct.iotlb_lock* %1, %struct.iotlb_lock** %4, align 8
  %6 = load %struct.iotlb_lock*, %struct.iotlb_lock** %4, align 8
  %7 = getelementptr inbounds %struct.iotlb_lock, %struct.iotlb_lock* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUG_ON(i32 %10)
  %12 = load %struct.iotlb_lock*, %struct.iotlb_lock** %4, align 8
  %13 = getelementptr inbounds %struct.iotlb_lock, %struct.iotlb_lock* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @MMU_LOCK_BASE_SHIFT, align 4
  %16 = shl i32 %14, %15
  store i32 %16, i32* %5, align 4
  %17 = load %struct.iotlb_lock*, %struct.iotlb_lock** %4, align 8
  %18 = getelementptr inbounds %struct.iotlb_lock, %struct.iotlb_lock* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @MMU_LOCK_VICT_SHIFT, align 4
  %21 = shl i32 %19, %20
  %22 = load i32, i32* %5, align 4
  %23 = or i32 %22, %21
  store i32 %23, i32* %5, align 4
  %24 = load %struct.iommu*, %struct.iommu** %3, align 8
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @MMU_LOCK, align 4
  %27 = call i32 @iommu_write_reg(%struct.iommu* %24, i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @iommu_write_reg(%struct.iommu*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
